SIV-749: Changed output of fetchAssociationsWithActiveInvitations from List to Page